force-app/main/default/objects/BwTranscodification__c/BwTranscodification__c.object-meta.xml
<CustomObject>
    <description>Objets comportant les différents valeurs des systems</description>
    <label>Transcodification</label>
    <nameField>
        <displayFormat>TRS-{0000}</displayFormat>
        <label>Transcodification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transcodifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>