force-app/main/default/objects/BwTranscodification__c/fields/comment__c.field-meta.xml
<CustomField>
    <fullName>comment__c</fullName>
    <label>Commentaire</label>
    <length>150</length>
    <type>Text</type>
</CustomField>