force-app/main/default/objects/BwTranscodification__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <label>DataType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BU</fullName>
            </value>
            <value>
                <fullName>Agence Régionale</fullName>
            </value>
            <value>
                <fullName>Sous domaine</fullName>
            </value>
            <value>
                <fullName>Secteur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>