force-app/main/default/objects/BwTranscodification__c/fields/Mbabel__c.field-meta.xml
<CustomField>
    <fullName>Mbabel__c</fullName>
    <label>Mobility Label</label>
    <length>150</length>
    <type>Text</type>
</CustomField>