force-app/main/default/objects/BwTranscodification__c/fields/MbApi__c.field-meta.xml
<CustomField>
    <fullName>MbApi__c</fullName>
    <label>Mobility API</label>
    <length>150</length>
    <type>Text</type>
</CustomField>