force-app/main/default/objects/BwTranscodification__c/fields/MbValue__c.field-meta.xml
<CustomField>
    <fullName>MbValue__c</fullName>
    <label>Mobility Value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>