force-app/main/default/objects/BwTranscodification__c/fields/VsApi__c.field-meta.xml
<CustomField>
    <fullName>VsApi__c</fullName>
    <label>Vision API</label>
    <length>150</length>
    <type>Text</type>
</CustomField>