force-app/main/default/objects/BwTranscodification__c/fields/VsLabel__c.field-meta.xml
<CustomField>
    <fullName>VsLabel__c</fullName>
    <label>Vision Label</label>
    <length>150</length>
    <type>Text</type>
</CustomField>