force-app/main/default/objects/BwTranscodification__c/fields/VsValue__c.field-meta.xml
<CustomField>
    <fullName>VsValue__c</fullName>
    <label>Vision Value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>