force-app/main/default/objects/BwTranscodification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MbApi__c</columns>
    <columns>MbValue__c</columns>
    <columns>VsApi__c</columns>
    <columns>VsValue__c</columns>
    <columns>VsLabel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>